--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-screens": "^3.35.0",
     "react-native-svg": "^15.8.0",
     "react-native-svg-transformer": "^1.5.0",
+    "react-redux": "^9.1.2",
     "redux": "^5.0.1"
   },
   "devDependencies": {
